# urdf-mesh-inertia

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml  test.yml
extras/: ellipsoid.scad  ellipsoid.stl  sphere.scad  sphere.stl
src/urdf_mesh_inertia/: __main__.py  mesh.py  xml.py
tests/: conftest.py  test_compute.py
