[tool.poetry]
name = "urdf-mesh-inertia"
version = "0.1.0"
description = ""
authors = ["Daniele Tricoli <eriol@mornie.org>"]
readme = "README.md"
packages = [{include = "urdf_mesh_inertia", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pymeshlab = "^2023.12.post1"
jinja2 = "^3.1.4"


[tool.poetry.scripts]
urdf-mesh-inertia = "urdf_mesh_inertia.__main__:run"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
