[tool.poetry]
name = "urdf-mesh-inertia"
version = "0.2.0"
description = "Compute inertial parameters for a mesh using pymeshlab and return the URDF inertial tag for links."
authors = ["Daniele Tricoli <eriol@mornie.org>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/eriol/urdf-mesh-inertia"
packages = [{include = "urdf_mesh_inertia", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pymeshlab = "^2023.12.post1"
jinja2 = "^3.1.4"

[tool.poetry.scripts]
urdf-mesh-inertia = "urdf_mesh_inertia.__main__:run"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
